--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,6 +29,7 @@
   --scrollbar-color-1: var(--first-color-lighten);
   --scrollbar-color-2: var(--first-color-light);
   --section-header-color-1: #ffc04c;
+  --section-header-color-2: #00CFFF;
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
@@ -555,6 +556,15 @@ img{
   padding-bottom: 1rem;
   position: relative;
 }
+.main__header-page.small-version {
+  background-color: var(--section-header-color-2);
+  max-height: 400px;
+  height: 400px;
+  display: flex;
+  vertical-align: middle;
+  text-align: center;
+  padding: 0px 3rem;
+}
 .section__img-large {
   max-height: 500px;
 }
@@ -566,6 +576,11 @@ img{
   font-size: 6rem;
   line-height: 95%;
 }
+.main__header-page.small-version .section__title {
+  max-width: 100%;
+  font-size: 4rem;
+  line-height: 95%;
+}
 .main__header-page:after {
   position: absolute;
   content: '';
@@ -575,6 +590,7 @@ img{
   height: 100%;
   width: 100%;
   bottom: 0;
+  left: 0;
   background-image: url(../img/waves.png);
 }
 @media screen and (max-width: 1050px) {
@@ -602,9 +618,21 @@ img{
   .customer__page-desc {
     max-width: 100%;
   }
+  .footer__container {
+    row-gap: 2rem;
+  }
+  .footer__content-subs {
+    margin-top: -3rem;
+  }
+  .footer__content-subs .footer__title {
+    display: none;
+  }
 }
 @media screen and (max-width: 570px) {
-  .main__header-page {
+  .main__header-page.small-version {
+    padding: 0px 1rem;
+  }
+  .main__header-page:not(.small-version) {
     margin-top: 0px;
     height: 600px;
     display: block;
@@ -615,6 +643,12 @@ img{
     max-width: 100%;
     text-align: center;
     padding: 0 1rem;
+  }
+  .main__header-page.small-version .section__title {
+    font-size: 3rem;
+  }
+  .about__page-desc {
+    display: block;
   }
   .section__img-large img {
     max-height: 100%;
@@ -641,34 +675,29 @@ img{
 }
 /*=============== PRODUCT ===============*/
 .product__page {
-  margin-top: 10rem;
+  margin-top: 7rem;
   margin-bottom: var(--mb-2-5);
 }
 .product__page-brands {
-  gap: 2rem;
+  gap: 1rem;
   margin-top: 5rem;
   grid-template-columns: repeat(3, 1fr);
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .product__page-brands-block {
   pointer-events: none;
-  border: 1px solid #f9f9f9;
-  box-shadow: 0 0 10px -3px rgba(0, 0, 0, 0.1);
   padding: 1rem;
-  border-radius: 15px;
+  flex: 0 0 calc(25% - 1rem);
 }
-@media screen and (max-width: 570px) {
-  .product__page-brands {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media screen and (max-width: 450px) {
-  .product__page-brands {
-    margin-top: 3rem;
+@media screen and (max-width: 700px) {
+  .product__page-brands-block {
+    flex: 0 0 calc(33.33% - 1rem);
   }
 }
 @media screen and (max-width: 570px) {
-  .product__page-brands {
-    grid-template-columns: repeat(2, 1fr);
+  .product__page-brands-block {
+    flex: 0 0 calc(50% - 1rem);
   }
 }
 @media screen and (max-width: 450px) {
@@ -678,13 +707,30 @@ img{
 }
 /*=============== ABOUT ===============*/
 .about.section {
-  padding: 1rem 1rem 2rem;
+  padding: 1rem 1rem 0rem;
   margin-top: var(--mb-2-5);
 }
 .about__container{
   row-gap: 2rem;
 }
-
+.about__page-desc {
+  display: flex;
+  gap: 3rem;
+  text-align: justify;
+  padding: 2rem 0 6rem;
+  max-width: 100%;
+  margin: 0 auto;
+}
+.about__page-desc-first {
+  display: block;
+  text-align: justify;
+  padding: 5rem 0 0.5rem;
+  max-width: 100%;
+  margin: 0 auto;
+}
+.about__page-desc-left {
+  font-weight: 600;
+}
 .about__figure {
   max-width: 600px;
   flex: 0 0 70%;
@@ -698,7 +744,7 @@ img{
 }
 
 .about__description{
-  margin-bottom: var(--mb-2);
+  margin-bottom: 0.5rem;
 }
 
 .about__details{
@@ -744,7 +790,7 @@ img{
 
 .testimony__card{
   background-color: var(--container-color);
-  padding: 2rem 2.5rem 2rem 2.5rem;
+  padding: 0.5rem 2.5rem 2rem 2.5rem;
   border-radius: 1rem;
   display: flex;
   flex-direction: row;
@@ -752,11 +798,19 @@ img{
 }
 
 .testimony__card-description{
-  font-size: var(--normal-font-size);
+  font-size: var(--h3-font-size);
+  font-weight: 500;
   align-items: center;
   display: grid;
   align-content: center;
   gap: 1rem;
+}
+
+.testimony__card-description p:first-letter {
+  font-size: 67px;
+  line-height: 70px;
+  font-weight: 600;
+  color: var(--first-color-light);
 }
 
 .testimony__card-name {
@@ -1205,7 +1259,7 @@ footer .footer__title, footer .footer__logo {
 
 .footer__input{
   width: 70%;
-  padding: 0 .5rem;
+  padding: 0 .3rem;
   background: none;
   color: var(--text-color);
   border: none;
@@ -1344,6 +1398,9 @@ footer .footer__title, footer .footer__logo {
   .testimony__photo {
     display: none;
   }
+  .product__page-brands {
+    gap: 1rem;
+  }
 }
 @media screen and (max-width: 576px){
   .home__title {
@@ -1376,6 +1433,22 @@ footer .footer__title, footer .footer__logo {
 
   .footer__subscribe{
     width: 400px;
+  }
+  .footer__title {
+    line-height: 130%;
+  }
+}
+@media screen and (max-width: 575px){
+  .footer__title {
+    line-height: 130%;
+  }
+}
+@media screen and (max-width: 766px){
+  .product__page {
+    margin-top: 0rem !important;
+  }
+  .product__page-brands {
+    margin-top: 3rem;
   }
 }
 @media screen and (min-width: 767px){
@@ -1436,7 +1509,9 @@ footer .footer__title, footer .footer__logo {
   .testimony__card-name {
     display: block;
   }
-
+  .product__page {
+    margin-top: 5rem;
+  }
 }
 @media screen and (min-width: 901px){
   .nav__toggle,
@@ -1570,7 +1645,7 @@ footer .footer__title, footer .footer__logo {
     left: 0px;
   }
   .about.section {
-    padding: 3rem 3rem 4rem;
+    padding: 3rem 3rem 0rem;
   }
   .about__data {
     padding-top: 2%;
