--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1450,6 +1450,13 @@ footer .footer__title, footer .footer__logo {
   .product__page-brands {
     margin-top: 3rem;
   }
+  .about__page-desc {
+    display: grid;
+    gap: 2.5rem;
+  }
+  .about__page-desc-left {
+    font-weight: 600;
+  }
 }
 @media screen and (min-width: 767px){
   body{
@@ -1529,10 +1536,10 @@ footer .footer__title, footer .footer__logo {
   }
 }
 /* For large devices */
-@media screen and (min-width: 992px){
+@media screen and (min-width: 1100px){
   .container{
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: var(--mb-2);
+    margin-right: var(--mb-2);
   }
 
   .section{
